[package]
name = "guide-to-rust-samples"
version = "0.1.0"
edition = "2021"

[[example]]
name = "ownership"
path = "examples/chapter01/ownership.rs"

[[example]]
name = "ownership_function"
path = "examples/chapter01/ownership_function.rs"

[[example]]
name = "ownership_returns"
path = "examples/chapter01/ownership_returns.rs"

[[example]]
name = "borrowing"
path = "examples/chapter01/borrowing.rs"

[[example]]
name = "borrowing_mut"
path = "examples/chapter01/borrowing_mut.rs"

[[example]]
name = "no_ownership"
path = "examples/chapter01/no_ownership.rs"

[[example]]
name = "copy_trait"
path = "examples/chapter01/copy_trait.rs"

[[example]]
name = "clone_trait"
path = "examples/chapter01/clone_trait.rs"

[[example]]
name = "refs"
path = "examples/chapter01/refs.rs"

[[example]]
name = "cow"
path = "examples/chapter01/cow.rs"

[[example]]
name = "box"
path = "examples/chapter01/box.rs"

[[example]]
name = "rc"
path = "examples/chapter01/rc.rs"

[[example]]
name = "cell_refcell_mutex"
path = "examples/chapter01/cell_refcell_mutex.rs"

[[example]]
name = "lifetime"
path = "examples/chapter01/lifetime.rs"

[[example]]
name = "static"
path = "examples/chapter01/static.rs"

[[example]]
name = "trait"
path = "examples/chapter02/trait.rs"

[[example]]
name = "generics"
path = "examples/chapter02/generics.rs"

[[example]]
name = "dyn_impl"
path = "examples/chapter02/dyn_impl.rs"

[[example]]
name = "trait_boundary"
path = "examples/chapter02/trait_boundary.rs"

[[example]]
name = "async_trait"
path = "examples/chapter02/async_trait.rs"

[[example]]
name = "self"
path = "examples/chapter02/self.rs"

[[example]]
name = "associated_constants"
path = "examples/chapter02/associated_constants.rs"

[[example]]
name = "associated_types"
path = "examples/chapter02/associated_types.rs"

[[example]]
name = "associated_generics"
path = "examples/chapter02/associated_generics.rs"

[[example]]
name = "default_parameter"
path = "examples/chapter02/default_parameter.rs"

[[example]]
name = "rpitit_generics"
path = "examples/chapter02/rpitit_generics.rs"

[[example]]
name = "rpitit_associated"
path = "examples/chapter02/rpitit_associated.rs"

[[example]]
name = "drop"
path = "examples/chapter03/drop.rs"

[[example]]
name = "debug"
path = "examples/chapter03/debug.rs"

[[example]]
name = "default"
path = "examples/chapter03/default.rs"

[[example]]
name = "conversion_reference"
path = "examples/chapter03/conversion_reference.rs"

[[example]]
name = "from_into"
path = "examples/chapter03/from_into.rs"

[dependencies]
futures = "0.3.31"
tokio = { version = "1.41.1", features = ["full"] }

