[package]
name = "guide-to-rust-samples"
version = "0.1.0"
edition = "2021"

[[example]]
name = "ownership"
path = "examples/chapter01/ownership.rs"

[[example]]
name = "ownership_function"
path = "examples/chapter01/ownership_function.rs"

[[example]]
name = "ownership_returns"
path = "examples/chapter01/ownership_returns.rs"

[[example]]
name = "borrowing"
path = "examples/chapter01/borrowing.rs"

[[example]]
name = "borrowing_mut"
path = "examples/chapter01/borrowing_mut.rs"

[[example]]
name = "no_ownership"
path = "examples/chapter01/no_ownership.rs"

[[example]]
name = "copy_trait"
path = "examples/chapter01/copy_trait.rs"

[[example]]
name = "clone_trait"
path = "examples/chapter01/clone_trait.rs"

[[example]]
name = "refs"
path = "examples/chapter01/refs.rs"

[[example]]
name = "cow"
path = "examples/chapter01/cow.rs"

[[example]]
name = "box"
path = "examples/chapter01/box.rs"

[[example]]
name = "rc"
path = "examples/chapter01/rc.rs"

[[example]]
name = "cell_refcell_mutex"
path = "examples/chapter01/cell_refcell_mutex.rs"

[[example]]
name = "lifetime"
path = "examples/chapter01/lifetime.rs"

[[example]]
name = "static"
path = "examples/chapter01/static.rs"

[[example]]
name = "trait"
path = "examples/chapter02/trait.rs"

[[example]]
name = "generics"
path = "examples/chapter02/generics.rs"

[[example]]
name = "dyn_impl"
path = "examples/chapter02/dyn_impl.rs"

[[example]]
name = "trait_boundary"
path = "examples/chapter02/trait_boundary.rs"

[[example]]
name = "async_trait"
path = "examples/chapter02/async_trait.rs"

[[example]]
name = "self"
path = "examples/chapter02/self.rs"

[[example]]
name = "associated_constants"
path = "examples/chapter02/associated_constants.rs"

[[example]]
name = "associated_types"
path = "examples/chapter02/associated_types.rs"

[[example]]
name = "associated_generics"
path = "examples/chapter02/associated_generics.rs"

[[example]]
name = "inherit_trait"
path = "examples/chapter02/inherit_trait.rs"

[[example]]
name = "default_parameter"
path = "examples/chapter02/default_parameter.rs"

[[example]]
name = "rpitit_generics"
path = "examples/chapter02/rpitit_generics.rs"

[[example]]
name = "rpitit_associated"
path = "examples/chapter02/rpitit_associated.rs"

[[example]]
name = "trait_upcast"
path = "examples/chapter02/trait_upcast.rs"

[[example]]
name = "drop"
path = "examples/chapter03/drop.rs"

[[example]]
name = "debug"
path = "examples/chapter03/debug.rs"

[[example]]
name = "default"
path = "examples/chapter03/default.rs"

[[example]]
name = "from_into"
path = "examples/chapter03/from_into.rs"

[[example]]
name = "tryfrom_tryinto"
path = "examples/chapter03/tryfrom_tryinto.rs"

[[example]]
name = "option"
path = "examples/chapter03/option.rs"

[[example]]
name = "result"
path = "examples/chapter03/result.rs"

[[example]]
name = "asref_asmut"
path = "examples/chapter03/asref_asmut.rs"

[[example]]
name = "deref"
path = "examples/chapter03/deref.rs"

[[example]]
name = "toowned"
path = "examples/chapter03/toowned.rs"

[[example]]
name = "maybe_uninit"
path = "examples/chapter03/maybe_uninit.rs"

[[example]]
name = "refcell"
path = "examples/chapter03/refcell.rs"

[[example]]
name = "unsafecell"
path = "examples/chapter03/unsafecell.rs"

[[example]]
name = "struct_update"
path = "examples/chapter04/struct_update.rs"

[[example]]
name = "struct_pattern"
path = "examples/chapter04/struct_pattern.rs"

[[example]]
name = "turbofish"
path = "examples/chapter04/turbofish.rs"

[[example]]
name = "raw_string"
path = "examples/chapter04/raw_string.rs"

[[example]]
name = "global_static"
path = "examples/chapter05/global_static.rs"

[[example]]
name = "singleton"
path = "examples/chapter05/singleton.rs"

[[example]]
name = "lazy_static"
path = "examples/chapter05/lazy_static.rs"

[[example]]
name = "once_cell"
path = "examples/chapter05/once_cell.rs"

[[example]]
name = "error_trait"
path = "examples/chapter06/error_trait.rs"

[[example]]
name = "error_custom"
path = "examples/chapter06/error_custom.rs"

[[example]]
name = "dyn_error"
path = "examples/chapter06/dyn_error.rs"

[[example]]
name = "error_cause"
path = "examples/chapter06/error_cause.rs"

[[example]]
name = "error_anyhow"
path = "examples/chapter06/error_anyhow.rs"

[[example]]
name = "thiserror_anyhow"
path = "examples/chapter06/thiserror_anyhow.rs"

[[example]]
name = "error_anyhow_others"
path = "examples/chapter06/error_anyhow_others.rs"

[[example]]
name = "thiserror_anyhow_useful"
path = "examples/chapter06/thiserror_anyhow_useful.rs"

[[example]]
name = "visibility"
path = "examples/chapter07/visibility.rs"

[[example]]
name = "visibility_qualifier"
path = "examples/chapter07/visibility_qualifier.rs"

[[example]]
name = "visibility_trait_enum"
path = "examples/chapter07/visibility_trait.rs"

[[example]]
name = "visibility_path"
path = "examples/chapter07/visibility_path.rs"

[dependencies]
anyhow = "1.0.97"
futures = "0.3.31"
lazy_static = "1.5.0"
once_cell = "1.21.1"
regex = "1.11.1"
thiserror = "2.0.12"
tokio = { version = "1.41.1", features = ["full"] }

